--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 # Dependency directories
-node_modules/
+node_modules
+
+# node module
+.node_modules
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+
+# vscode
+..vscode
